# fastgeom3d-cpp

./: CMakeLists.txt  LICENSE  README.md
docs/: cross-platform-floating-point-investigation.md  floating-point-ulp-explanation.md  intersections-simd-plan.md
include/fastgeom3d/: AABB.h  AnnularSector2D.h  Circle2D.h  ContinuousRectangularPrism.h  Cylinder.h  Ellipse2D.h  EllipticalCylinder.h  Intersections.h  Polygon2D.h  PolygonalPrism.h  Polyline.h  Polyline2D.h  Prism.h  Quadrilateral2D.h  QuadrilateralPrism.h  Shape2D.h  Shape3D.h  Sphere.h  Triangle2D.h  TriangularPrism.h  UTMCoordinate.h  Vec2.h  Vec3.h  algorithms.h  core.h  fastgeom3d.h  geodesy.h  prisms.h  shapes2d.h  shapes3d.h
src/: AABB.cpp  AnnularSector2D.cpp  Circle2D.cpp  ContinuousRectangularPrism.cpp  Cylinder.cpp  Ellipse2D.cpp  EllipticalCylinder.cpp  Intersections.cpp  Polygon2D.cpp  PolygonalPrism.cpp  Polyline.cpp  Polyline2D.cpp  Prism.cpp  PrismSupport.cpp  PrismSupport.h  Quadrilateral2D.cpp  QuadrilateralPrism.cpp  Sphere.cpp  Triangle2D.cpp  TriangularPrism.cpp  UTMCoordinate.cpp  Vec2.cpp  Vec3.cpp  fastgeom3d.cpp
tests/: CMakeLists.txt  test_2d_shapes.cpp  test_aabb.cpp  test_annularsector2d.cpp  test_circle2d.cpp  test_fastgeom3d.cpp  test_intersections.cpp  test_prism_factories.cpp  test_sphere.cpp  test_utm.cpp  test_vec.cpp
